welcome.lessons.welcome.bat.bool1.Makes10.scala.error
makes10:3: error: reassignment to val
	rep = ( a = 10 || b = 10 ) || ( a + b = 10 )
                  ^